--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 
 <% posts.forEach(post => { %>
     <h1> <%- post.postTitle -%> </h1>
-    <p class="textareaOutput"><%- post.postBody -%></p>
+    <p class="textareaOutput"><%- post.postBody.substring(0, 1000) + " ... " -%></p>
 <% }) %>
 
 <%- include("partials/footer") -%>
