--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </div>
-<div class="footer-padding"></div>
+<div class="footer-container">
   <div class="footer">
-    <p>&copy; Alan S.</p>
+    <p>2020 &copy; Alan S.</p>
   </div>
 </div>
 </body>
