brand navigation bar is clickable

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,19 +7,19 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light navbar-main">
     <div class="container">
-      <div class="navbar-brand">
-        <p>DAILY JOURNAL</p>
+      <div class="navbar-brand brand-nav">
+        <p><a href="/home" >DAILY JOURNAL</a></p>
       </div>
         <ul class="navbar-nav  justify-content-end">
           <!-- 6 -->
           <li class="nav-item" id="home"><a class="nav-link" href="/">HOME</a></li>
-          <li class="nav-item" id="about"><a class="nav-link" href="/about">ABOUT US</a></li>
-          <li class="nav-item" id="contact"><a class="nav-link" href="/contact">CONTACT US</a></li>
+          <li class="nav-item" id="about"><a class="nav-link" href="/about">ABOUT</a></li>
+          <li class="nav-item" id="contact"><a class="nav-link" href="/contact">CONTACT</a></li>
         </ul>
     </div>
   </nav>
 
   <body>
-    <div class="container">
+    <div class="container body-container">
