--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") -%>
 
-<h1> <%= postTitle %></h1>
-<p class="textareaOutput"> <%= postBody %></p>
+<h1 class="postTitle"> <%= postTitle %></h1>
+<p class="postBody"><%= postBody %></p>
 
 <%- include("partials/footer") -%>
